--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "reac-satrter",
+  "name": "reac-starter",
   "version": "1.0.0",
   "description": "react app",
   "main": "index.html",
+  "repository" : "https://github.com/giTomas/react-starter",
   "scripts": {
     "start": "webpack -d && webpack-dev-server -inline --hot",
     "build": "webpack -p"
@@ -12,25 +13,41 @@
   "dependencies": {
     "color": "^1.0.3",
     "deep-freeze": "0.0.1",
+    "es6-promise": "^4.0.5",
     "inline-style-prefixer": "^2.0.5",
+    "mobx": "^3.0.0",
+    "mobx-react": "^4.1.0",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
     "react-highlighter": "^0.3.3",
-    "react-router": "^4.0.0-alpha.6"
+    "react-router": "^4.0.0-alpha.6",
+    "whatwg-fetch": "^2.0.1"
   },
   "devDependencies": {
     "babel-core": "^6.18.2",
+    "babel-eslint": "^7.1.1",
     "babel-loader": "^6.2.7",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-0": "^6.16.0",
     "babel-preset-stage-1": "^6.16.0",
+    "babel-preset-stage-2": "^6.18.0",
     "babel-preset-stage-3": "^6.17.0",
     "css-loader": "^0.26.1",
+    "eslint": "^3.13.1",
+    "eslint-config-airbnb": "^14.0.0",
+    "eslint-loader": "^1.6.1",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^3.0.2",
+    "eslint-plugin-react": "^6.9.0",
     "expect": "^1.20.2",
+    "exports-loader": "^0.6.3",
     "file-loader": "^0.9.0",
     "image-webpack-loader": "^3.1.0",
+    "imports-loader": "^0.7.0",
+    "json-loader": "^0.5.4",
+    "mobx-react-devtools": "^4.2.11",
     "style-loader": "^0.13.1",
     "webpack": "^1.13.3",
     "webpack-dev-server": "^1.16.2"
