lint config dir structure

--- a/.eslintrc
+++ b/.eslintrc
@@ -5,11 +5,24 @@
      "jsx": true
      }
   },
+  "env": {
+    "browser": true,
+    "node": true,
+  },
  "parser": "babel-eslint",
  "plugins": [
    "react"
  ],
  "rules": {
+    # "linebreak-style": "off",
+    # "prefer-template": "off",
+    # "func-call-spacing": "off",
+    # "padded-block": "off",
+    "react/jsx-filename-extension": [
+      1, { "extensions": [".js", ".jsx"] }
+    ],
+   },
+"globals": {
 
-   }
+  }
 }
