--- a/package.json
+++ b/package.json
@@ -1,25 +1,19 @@
 {
   "name": "reac-starter",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "react app",
   "main": "index.html",
-  "repository" : "https://github.com/giTomas/react-starter",
+  "repository": "https://github.com/giTomas/react-starter",
   "scripts": {
-    "start": "webpack -d && webpack-dev-server -inline --hot",
+    "start": "webpack -d && webpack-dev-server --hot",
     "build": "webpack -p"
   },
   "author": "Tomas Kosegi",
   "license": "MIT",
   "dependencies": {
-    "color": "^1.0.3",
-    "deep-freeze": "0.0.1",
     "es6-promise": "^4.0.5",
-    "inline-style-prefixer": "^2.0.5",
-    "mobx": "^3.0.0",
-    "mobx-react": "^4.1.0",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
-    "react-highlighter": "^0.3.3",
     "react-router": "^4.0.0-alpha.6",
     "whatwg-fetch": "^2.0.1"
   },
@@ -41,15 +35,11 @@
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^3.0.2",
     "eslint-plugin-react": "^6.9.0",
-    "expect": "^1.20.2",
     "exports-loader": "^0.6.3",
     "file-loader": "^0.9.0",
-    "image-webpack-loader": "^3.1.0",
     "imports-loader": "^0.7.0",
-    "json-loader": "^0.5.4",
-    "mobx-react-devtools": "^4.2.11",
     "style-loader": "^0.13.1",
-    "webpack": "^1.13.3",
-    "webpack-dev-server": "^1.16.2"
+    "webpack": "^2.2.1",
+    "webpack-dev-server": "^2.2.1"
   }
 }
