--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
     "react-router": "^4.0.0-alpha.6",
+    "styled-components": "^1.4.2",
     "whatwg-fetch": "^2.0.1"
   },
   "devDependencies": {
