--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "start": "webpack -d && webpack-dev-server --hot",
     "build": "webpack -p",
-    "test": "jest"
+    "test": "jest",
+    "test -w": "jest --watch"
   },
   "author": "Tomas Kosegi",
   "license": "MIT",
@@ -15,14 +16,15 @@
     "es6-promise": "^4.0.5",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
-    "react-router": "^4.0.0-beta.5",
+    "react-router-dom": "^4.0.0-beta.6",
     "styled-components": "^1.4.2",
+    "typeface-istok-web": "0.0.22",
     "whatwg-fetch": "^2.0.1"
   },
   "devDependencies": {
     "babel-core": "^6.18.2",
     "babel-eslint": "^7.1.1",
-    "babel-jest": "^18.0.0",
+    "babel-jest": "^19.0.0",
     "babel-loader": "^6.2.7",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.22.0",
@@ -38,15 +40,16 @@
     "eslint-config-airbnb": "^14.0.0",
     "eslint-loader": "^1.6.1",
     "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^3.0.2",
+    "eslint-plugin-jsx-a11y": "^4.0.0",
     "eslint-plugin-react": "^6.9.0",
     "exports-loader": "^0.6.3",
-    "file-loader": "^0.9.0",
+    "file-loader": "^0.10.1",
     "imports-loader": "^0.7.0",
-    "jest": "^18.1.0",
+    "jest": "^19.0.2",
     "react-addons-test-utils": "^15.4.2",
     "react-test-renderer": "^15.4.2",
     "style-loader": "^0.13.1",
+    "url-loader": "^0.5.8",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.2.1"
   }
