--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
   "license": "MIT",
   "dependencies": {
     "es6-promise": "^4.0.5",
+    "rambda": "^0.5.6",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
-    "react-router-dom": "^4.0.0-beta.6",
+    "react-router-dom": "^4.0.0-beta.8",
     "styled-components": "^1.4.2",
     "typeface-istok-web": "0.0.22",
     "whatwg-fetch": "^2.0.1"
@@ -48,7 +49,7 @@
     "jest": "^19.0.2",
     "react-addons-test-utils": "^15.4.2",
     "react-test-renderer": "^15.4.2",
-    "style-loader": "^0.13.1",
+    "style-loader": "^0.13.2",
     "url-loader": "^0.5.8",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.2.1"
