--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "license": "MIT",
   "dependencies": {
     "es6-promise": "^4.0.5",
-    "rambda": "^0.5.6",
+    "ramda": "^0.23.0",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
     "react-router-dom": "^4.0.0-beta.8",
@@ -50,6 +50,7 @@
     "react-addons-test-utils": "^15.4.2",
     "react-test-renderer": "^15.4.2",
     "style-loader": "^0.13.2",
+    "uglifyjs-webpack-plugin": "^0.4.0",
     "url-loader": "^0.5.8",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.2.1"
