--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "es6-promise": "^4.0.5",
     "rambda": "^0.5.6",
+    "ramda": "^0.23.0",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
     "react-router-dom": "^4.0.0-beta.8",
