--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-addons-test-utils": "^15.4.2",
     "react-test-renderer": "^15.4.2",
     "style-loader": "^0.13.2",
+    "uglifyjs-webpack-plugin": "^0.4.1",
     "url-loader": "^0.5.8",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.2.1"
