--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,8 @@
 {
   "presets": ["es2017", ["es2015", {"modules": false}], "react", "stage-0", "stage-1", "stage-2", "stage-3"],
-  "plugins": ["transform-decorators-legacy"],
+  "plugins": [
+    "transform-decorators-legacy",
+    "transform-runtime",
+    "babel-plugin-transform-es2015-modules-commonjs",
+  ],
 }
