--- a/package.json
+++ b/package.json
@@ -13,47 +13,46 @@
   "author": "Tomas Kosegi",
   "license": "MIT",
   "dependencies": {
-    "es6-promise": "^4.0.5",
+    "es6-promise": "^4.1.0",
     "ramda": "^0.23.0",
-    "react": "^15.3.2",
-    "react-dom": "^15.3.2",
-    "react-router-dom": "^4.0.0-beta.8",
-    "styled-components": "^1.4.2",
+    "react": "^15.5.4",
+    "react-dom": "^15.5.4",
+    "react-router-dom": "^4.1.1",
+    "styled-components": "^1.4.6",
     "typeface-istok-web": "0.0.22",
-    "whatwg-fetch": "^2.0.1"
+    "whatwg-fetch": "^2.0.3"
   },
   "devDependencies": {
-    "babel-core": "^6.18.2",
-    "babel-eslint": "^7.1.1",
+    "babel-core": "^6.24.1",
+    "babel-eslint": "^7.2.3",
     "babel-jest": "^19.0.0",
-    "babel-loader": "^6.2.7",
+    "babel-loader": "^6.4.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-plugin-transform-es2015-modules-commonjs": "^6.22.0",
-    "babel-preset-es2015": "^6.18.0",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.24.1",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-es2015": "^6.24.1",
     "babel-preset-es2017": "^6.24.1",
-    "babel-preset-react": "^6.16.0",
-    "babel-preset-stage-0": "^6.16.0",
-    "babel-preset-stage-1": "^6.16.0",
-    "babel-preset-stage-2": "^6.18.0",
-    "babel-preset-stage-3": "^6.17.0",
-    "css-loader": "^0.26.1",
-    "enzyme": "^2.7.1",
-    "eslint": "^3.13.1",
-    "eslint-config-airbnb": "^14.0.0",
-    "eslint-loader": "^1.6.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "babel-preset-stage-1": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
+    "babel-preset-stage-3": "^6.24.1",
+    "css-loader": "^0.26.4",
+    "enzyme": "^2.8.2",
+    "eslint": "^3.19.0",
+    "eslint-config-airbnb": "^14.1.0",
+    "eslint-loader": "^1.7.1",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^4.0.0",
-    "eslint-plugin-react": "^6.9.0",
-    "exports-loader": "^0.6.3",
+    "eslint-plugin-react": "^6.10.3",
+    "exports-loader": "^0.6.4",
     "file-loader": "^0.10.1",
-    "imports-loader": "^0.7.0",
+    "imports-loader": "^0.7.1",
     "jest": "^19.0.2",
-    "react-addons-test-utils": "^15.4.2",
-    "react-test-renderer": "^15.4.2",
     "style-loader": "^0.13.2",
-    "uglifyjs-webpack-plugin": "^0.4.1",
+    "uglifyjs-webpack-plugin": "^0.4.3",
     "url-loader": "^0.5.8",
-    "webpack": "^2.2.1",
-    "webpack-dev-server": "^2.2.1"
+    "webpack": "^2.6.0",
+    "webpack-dev-server": "^2.4.5"
   }
 }
